--- a/inventory.css
+++ b/inventory.css
@@ -60,15 +60,6 @@
     
 }
 
-.dropbtn {
-    background-color: rgb(19, 19, 19);
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    font-size: 16px;
-    border: none;
-  }
- 
-
 /*----------------------------------------------------------------------------------------------------------*/
 
 body>h1{
@@ -96,6 +87,47 @@ body>h1{
   background-color: rgb(247, 247, 247);
 }
 
+.first-section{
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 45px;
+  gap: 20px;
+
+}
+
+.first-section h2{
+  
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #4e4e4e;
+  font-weight: 500;
+  font-size: 17px;
+}
+.colors{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+
+.first-section ul{
+  
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  list-style: none;
+  color: #ffffff;padding: 10px;
+}
+
+.models{
+  width: 300px;
+  height: 200px;
+  padding: 20px;
+  background-color: #272727;
+  border-radius: 20px;
+  
+}
 .vehicles{
   
   grid-column: 2/4;
@@ -202,7 +234,6 @@ body>h1{
   align-items: center;
   border: 1px solid rgb(218, 218, 218);
 } */
-
 
 .boxLower{
   grid-column: 1/4;
