--- a/shop.css
+++ b/shop.css
@@ -63,3 +63,125 @@
 
 
 /*----------------------------------------------------------------------------------------------------------*/
+
+
+.main-content{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 34% 33% 33%;
+    grid-template-rows: 100px 410px 410px 410px;
+    background-color: blueviolet;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+.product-section{
+    grid-column: 2/4;
+    grid-row: 1/5;
+    background-color: rgb(255, 255, 255);
+}
+
+.p-heading{
+    grid-column: 2/4;
+    grid-row: 1/2;
+    text-align: center;
+    padding: 30px;
+    background-color: rgb(248, 248, 248);
+}
+.p-heading h2{
+    font-weight: 300;
+}
+
+.products{
+    grid-column: 2/4;
+    grid-row: 2/5;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-top: 30px;
+}
+.box{
+    width: 330px;
+    height: 370px;
+    border-radius: 20px;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.404);
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.upper-section-slider{
+    width: 50%;
+    height:40%;
+    /* background-color: rgb(124, 87, 37); */
+}
+.upper-section{
+    width: 90%;
+    height:40%;
+    /* background-color: rgb(124, 87, 37); */
+}
+.upper-section img{
+    width: 92%;
+}
+.upper-section2{
+    width: 30%;
+    height:40%;
+}
+.upper-section2 img{
+    width: 100%;
+}
+
+.slider{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    /* overflow: hidden; */
+    overflow-x: hidden;
+  }
+  
+  .slider img{
+    width: 150px;
+    /* height: 200px; */
+    padding-left: 10px;
+    border-radius: 5px;
+  }
+.lower-section{
+    
+    width: 90%;
+    height:50%;
+    border-radius: 10px;
+    background-color: rgb(240, 240, 240);
+    padding: 10px;
+    text-align: left;
+}
+.lower-section:hover{
+    background-color: rgb(32, 32, 32);
+}
+.lower-section h2{
+    /* font-size: medium; */
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: rgb(97, 97, 97);
+    font-weight: 200;
+}
+.lower-section h2 span{
+    font-size: medium;
+    color: rgb(156, 156, 156);
+}
+
+.lower-section h3{
+    font-weight: 200;
+    font-size: small;
+    color: rgb(97, 97, 97);
+}
+.lower-section a{
+    text-decoration: none;
+}
+.side-bar{
+    grid-column: 1/2;
+    grid-row:1/5;
+    background-color: rgb(248, 248, 248);
+}
