--- a/account.css
+++ b/account.css
@@ -138,4 +138,23 @@
     background-color: rgb(46, 46, 46);
     border-radius: 10px;
     padding: 13px 30px;
+    box-shadow: 0px 4px 4px black;
+}
+
+.admin{
+    text-align: center;
+    
+}
+
+.admin a{
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(255, 255, 255);
+    background-color: rgb(46, 46, 46);
+    border-radius: 10px;
+    padding: 13px 30px;
+}
+
+.admin a:hover{
+    box-shadow: 0px 4px 4px black;
 }
