--- a/buyVehicle.css
+++ b/buyVehicle.css
@@ -61,3 +61,191 @@
 }
 
 /*----------------------------------------------------------------------------------------------------------*/
+
+
+
+.container{
+
+    width: 100%;
+    height: 95%;
+    padding-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  form{
+    width: 380px;
+    height: 480px;
+    box-shadow:0 2px 2px  rgba(0, 0, 0, 0.603);
+    background-color: rgb(247, 247, 247);
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .heading{
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+  }
+  .heading h1{
+    margin-top: 40px;
+    margin-bottom: 20px ;
+    font-size: 30px;
+    padding: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  .group{
+    width: 100%;
+    padding: 16px;
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif ;
+  }
+  form a{
+    /* text-decoration: none; */
+    color: rgb(0, 82, 102);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 15px;
+    font-size: small;
+  }
+  input[type ="email"], input[type="password"]{
+    padding: 10px;
+    width: 98%;
+    border-radius: 6px;
+    border: 2px solid #dbdbdb;
+  }
+  input[type="submit"]{
+  
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #dbdbdb;
+    padding: 10px 60px;
+    background-color: #252525;
+    border-radius: 10px;
+    
+  }
+
+
+  .header{
+
+    width: 100%;
+    height: 10vh;
+    background-color: #353535;
+    text-align: center;
+    align-items: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+  }
+  
+  .header h2{
+    padding-top: 12px;
+    font-weight: 100;
+    color: #9b9b9b;
+
+  }
+
+  .content{
+    width: 100%;
+    height: 80vh;
+    background-color: rgb(240, 240, 240);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background: url('img/inventory/buybackground1.png');
+    background-size: 35%;
+    background-repeat: no-repeat;
+    background-blend-mode:lighten;
+  }
+
+.left{
+    width: 40%;
+    height: 90%;
+  }
+.left img{
+  width: 750px;
+}
+
+.right{
+    width: 40%;
+    height: 90%;
+    background-color: #ffffff81;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.699);
+    border-radius: 20px;
+  }
+
+  form{
+
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0);
+    box-shadow: 0 0px 0px wheat;
+}
+.h2{
+    width: 100%;
+    padding-top: 45px;
+    padding-left:75px ;
+    color: rgb(138, 138, 138);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.inputs{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    gap: 8px;
+}
+.inputs input[type='text']{
+    width: 90%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: 45px;
+    padding: 10px;
+    border-radius:10px ;
+    
+}
+.inputs select{
+    width: 90%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: 45px;
+    padding: 10px;
+    border-radius:10px ;
+  
+}
+
+.inputs input[type='email']{
+    width: 90%;
+    height: 45px;
+
+    padding: 10px;
+    border-radius:10px ;
+}
+
+
+.inputs input[type='submit']{
+    width: 70%;
+    height: 45px;
+    padding: 10px;
+    border-radius:10px ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+    margin-top: 24px ;
+    margin-left: 30px;
+    border: 1px solid rgb(29, 29, 29);
+    background-color: rgb(68, 90, 129);
+    color: rgb(255, 255, 255);
+}
+.inputs input[type='submit']:hover{
+    width: 70%;
+    border: 1px solid rgb(29, 29, 29);
+    height: 45px;
+    padding: 10px;
+    margin-left: 30px;
+    border-radius:10px ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
+    border: 1px solid rgb(29, 29, 29);
+    color: rgb(24, 24, 24);
+    background-color: rgb(255, 255, 255);
+}
