--- a/cyber_truck.css
+++ b/cyber_truck.css
@@ -65,12 +65,37 @@
 
 .cyber-video{
     width: 100%;
-
-
 }
 .vid{
 
   position: absolute;
   z-index: -1;
 
+}
+
+.contentcyber{
+    width: 100%;
+    height: 90vh;
+    display: grid;
+    grid-template-columns: 33% 34% 33%;
+    grid-template-rows: 60% 10% 30%;
+   
+
+}
+
+.content{
+    grid-column: 1/4;
+    grid-row: 2/4;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    /* background-color: rgba(34, 34, 34, 0.555); */
+    font-weight: 100;
+}
+
+.content h1{
+
+    background-color: rgba(19, 19, 19, 0.808);
+    padding: 20px;
+    font-weight: 100;
 }
